# tweets-modelling

./: .gitignore  CHANGELOG.md  README.md  db-proj.cabal  db.sql  elastic-docker-compose.yml  elastic_connection.json  esTweetIndexMapping.json  hie.yaml  pg_connection.json  test.json  tweets-modelling.cabal
src/: CmdLine.hs  Coordinates.hs  Main.hs  Place.hs  Tweet.hs  User.hs
src/Database/: CountriesHandling.hs  Database.hs  TweetsHandling.hs  UsersHandling.hs
src/Elastic/: ElasticTweet.hs  Inserter.hs
src/Elastic/Models/: BulkCommands.hs  ElasticTweet.hs
src/Models/: Coordinates.hs  Country.hs  Tweet.hs  TweetMention.hs  User.hs
src/Postgres/: Inserter.hs
src/Postgres/Database/: CountriesHandling.hs  Database.hs  TablesInserts.hs  TweetsHandling.hs  UsersHandling.hs
