cabal-version:       2.4
name:                tweets-modelling
version:             0.1.0.0
license-file:        LICENSE
extra-source-files:  CHANGELOG.md

executable tweets-import
  main-is:             Main.hs
  hs-source-dirs: src
  ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
  other-modules:
    Models.Tweet,
    Models.User,
    Models.Coordinates,
    Models.Country,
    Models.TweetMention,
    Postgres.Inserter,
    Postgres.Database.Database,
    Postgres.Database.TablesInserts,
    Elastic.Inserter,
    Elastic.Models.ElasticTweet,
    Elastic.Models.BulkCommands,
    CmdLine
  -- other-extensions:
  build-depends:       
    base ^>=4.14.3.0,
    postgresql-simple,
    bytestring,
    aeson,
    zlib,
    text,
    directory,
    filepath,
    containers,
    utf8-string,
    split,
    time,
    req,
    optparse-applicative,
    exceptions,
    streaming,
    streaming-bytestring,
    resourcet,
    streaming-utils

  default-language:    Haskell2010
